# youtube-qa-dataset-builder

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_PREPARATION_SUMMARY.md  README.md  pyproject.toml  qa_generator.py  requirements.txt  setup.py  transcript_processor.py  youtube_fetcher.py  youtube_qa_builder.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml
