[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-qa-dataset-builder"
description = "A tool to build question-answer datasets from YouTube video transcripts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kodla AI Bot", email = "example@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "requests",
    "yt-dlp",
    "beautifulsoup4",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/your-username/youtube-qa-dataset-builder"
"Bug Tracker" = "https://github.com/your-username/youtube-qa-dataset-builder/issues"
Repository = "https://github.com/your-username/youtube-qa-dataset-builder.git"

[project.scripts]
youtube-qa-builder = "youtube_qa_builder:main"

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
exclude = ["data*", "tests*"]